# municipales-2026

./: PLAN.md  README.md  REFACTO_ECHARTS_PLAN.md  config.py  pyproject.toml
docs/: index.html
scripts/: build.py
src/: __init__.py  colors.py  download.py  process.py  visualize.py
