[project]
name = "municipales-2026"
version = "0.1.0"
description = "Visualisation interactive des résultats des municipales 2026"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "plotly>=5.24",
    "requests>=2.31",
    "openpyxl>=3.1",
    "numpy>=1.24",
]

[dependency-groups]
dev = []
